data passing impl. closes #3

--- a/frontend/login-app-ui-v2/src/app/components/shopping-list/shopping-list.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/shopping-list/shopping-list.component.html
@@ -2,7 +2,7 @@
 
   <h1> Shopping List </h1>
 
-  <!--<div class="alert alert-success" *ngIf='message'>{{message}}</div>-->
+  <div class="alert alert-success" *ngIf='message'>{{message}}</div>
 
   <div class="container">
     <table class="table">
@@ -11,8 +11,8 @@
         <th>Name</th>
         <th>Price</th>
         <th>Priority</th>
-        <!--      <th>Update</th>-->
-        <!--      <th>Delete</th>-->
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
       </thead>
       <tbody>
@@ -21,17 +21,17 @@
         <td>{{ item.name }}</td>
         <td>{{ item.price | currency: 'BDT ' }}</td>
         <td>{{ item.priority | uppercase }}</td>
-        <!--      <td><button (click)="updateTodo(todo.id)" class="btn btn-success">Update</button></td>-->
-        <!--      <td><button (click)="deleteTodo(todo.id)" class="btn btn-warning">Delete</button></td>-->
+        <td><button (click)="updateItem(item.id)" class="btn btn-success">Update</button></td>
+        <td><button (click)="deleteItem(item.id)" class="btn btn-warning">Delete</button></td>
       </tr>
       <!-- } -->
       </tbody>
 
     </table>
 
-    <!--  <div class="row">-->
-    <!--    <button (click)="addTodo()" class="btn btn-success">Add</button>-->
-    <!--  </div>-->
+      <div class="row">
+        <button (click)="addItem()" class="btn btn-success">Add</button>
+      </div>
 
   </div>
 
