--- a/frontend/login-app-ui-v2/src/app/components/home/home.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/home/home.component.html
@@ -6,10 +6,10 @@
     Welcome . You can manage your shopping list <a routerLink="/shopping-list">here</a>
   </div>
 
-  <!--<div class="container">-->
-  <!--  Click here to get a customized welcome message-->
-  <!--  <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get Welcome Message</button>-->
-  <!--</div>-->
+  <div class="container">
+    Click here to get a customized welcome message
+    <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get Welcome Message</button>
+  </div>
 
   <!--<div class="container" *ngIf="welcomeMessageFromService">-->
   <!--  <H2>Your Customized Welcome Message</H2>-->
