--- a/frontend/login-app-ui-v2/src/app/components/login/login.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/login/login.component.html
@@ -8,8 +8,8 @@
     Username: <input type="text" name="email" [(ngModel)]="email">
     Password: <input type="password" name="password" [(ngModel)]="password">
 <!--    <button class="btn btn-primary" (click)="handleLogin()">Login</button>-->
-    <button class="btn btn-primary" (click)="handleBasicAuthLogin()">Login</button>
-<!--    <button class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>-->
+<!--    <button class="btn btn-primary" (click)="handleBasicAuthLogin()">Login</button>-->
+    <button class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>
   </div>
 
 </div>
