--- a/frontend/login-app-ui-v2/src/app/components/login/login.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/login/login.component.html
@@ -5,11 +5,35 @@
   <div class="alert alert-warning" *ngIf="isInvalidCred">{{ invalidCredMsg }}</div>
 
   <div class="container-fluid">
-    Username: <input type="text" name="email" [(ngModel)]="email">
-    Password: <input type="password" name="password" [(ngModel)]="password">
-<!--    <button class="btn btn-primary" (click)="handleLogin()">Login</button>-->
-<!--    <button class="btn btn-primary" (click)="handleBasicAuthLogin()">Login</button>-->
-    <button class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>
+    <form #userEmail="ngForm">
+
+      <div class="form-group">
+        <label>Email</label>
+        <input class="form-control" type="email" #email="ngModel"
+               [class.is-invalid]="email.invalid && email.touched" required
+               pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+               name="email" [(ngModel)]="userData.email">
+
+        <div *ngIf="email.errors && (email.invalid || email.touched)">
+          <small class="text-danger" *ngIf="email.errors.required">Email is required</small>
+          <small class="text-danger" *ngIf="email.errors.pattern">Please provide a valid email address</small>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Password</label>
+        <input class="form-control" type="password" name="password" [(ngModel)]="userData.password">
+      </div>
+
+<!--      Username: <input type="text" name="email" [(ngModel)]="userData.email">-->
+<!--      Password: <input type="password" name="password" [(ngModel)]="userData.password">-->
+      <!--    <button class="btn btn-primary" (click)="handleLogin()">Login</button>-->
+      <!--    <button class="btn btn-primary" (click)="handleBasicAuthLogin()">Login</button>-->
+      <button class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>
+
+
+    </form>
   </div>
+
 
 </div>
