--- a/frontend/login-app-ui-v2/src/app/components/login/login.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/login/login.component.html
@@ -29,7 +29,8 @@
 <!--      Password: <input type="password" name="password" [(ngModel)]="userData.password">-->
       <!--    <button class="btn btn-primary" (click)="handleLogin()">Login</button>-->
       <!--    <button class="btn btn-primary" (click)="handleBasicAuthLogin()">Login</button>-->
-      <button class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>
+      <button [disabled]="!userEmail.valid"
+          class="btn btn-primary" (click)="handleJwtAuthLogin()">Login</button>
 
 
     </form>
