small modification and comments added

--- a/frontend/login-app-ui-v2/src/app/components/home/home.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/home/home.component.html
@@ -3,17 +3,11 @@
   <H1>Welcome!</H1>
 
   <div class="container">
-    Welcome . You can manage your shopping list <a routerLink="/shopping-list">here</a>
+    <p>You've logged in successfully.</p>
+    <p>This is a simple Shopping List Management Application</p>
+    <p>You can manage your shopping list by navigating through menu or
+      by clicking <a routerLink="/shopping-list">here</a></p>
   </div>
 
-  <div class="container">
-    Click here to get a customized welcome message
-    <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get Welcome Message</button>
-  </div>
-
-  <!--<div class="container" *ngIf="welcomeMessageFromService">-->
-  <!--  <H2>Your Customized Welcome Message</H2>-->
-  <!--  {{welcomeMessageFromService}}-->
-  <!--</div>-->
 
 </div>
