--- a/frontend/login-app-ui-v2/src/app/components/menu/menu.component.html
+++ b/frontend/login-app-ui-v2/src/app/components/menu/menu.component.html
@@ -1,4 +1,7 @@
 <header>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div><a href="http://dsinnovators.com/" class="navbar-brand">
       <b>DSi</b></a></div>
